@@ -3,6 +3,9 @@ changes may be omitted). For a complete list of changes, see the main
 changelog: http://svn.gna.org/viewcvs/*checkout*/wesnoth/trunk/changelog
 
 Version 1.3.10+svn:
+  * Campaigns
+    * Fix the recall list duplication bug.
+
   * Language and translations
     * Updated translations: Czech, French, Polish, Portuguese (Brazil), Swedish.
 
